# cppopt

./: CMakeLists.txt  Readme.md
examples/: 1d_newtonraphson.cpp  2d_gradientdescent.cpp  2d_newtonraphson.cpp  nlls_gaussnewton_findrotation.cpp  nlls_gaussnewton_fitcircle.cpp
inc/cppopt/: finite_difference.h  gauss_newton.h  gradient_descent.h  newton_raphson.h  numerical_derivative.h  types.h
test/: 1d_newtonraphson.cpp  2d_gradientdescent.cpp  2d_newtonraphson.cpp  curve_newtonraphson.cpp  fitcircle_gaussnewton.cpp  nlls_gaussnewton_alignpoints.cpp  nlls_gaussnewton_findrotation.cpp  nlls_gaussnewton_fitcircle.cpp
tests/: catch.hpp  main.cpp  multivariate_function.h  test_gauss_newton.cpp  test_gradient_descent.cpp  test_newton_raphson.cpp  test_numerical_derivatives.cpp  univariate_function.h
